@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods


class Agenda {

}

class Entry {
    progressStatus
    urgencyStatus
    estimatedDate
}

class Vehicle {
    vin
    vehiclePlate
    tareWeight
    grossWeight
    currentKm
    registrationDate
    acquisitionDate
    maintenanceFrequency
    type
}

class ToDoList{
}


Agenda "1" -- "1..*" Entry : has >

Entry "1" -- "1" Vehicle: needs >

ToDoList "1" -- "1..*" Entry : has >
@enduml